--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <body>
         <h1>Jogo da Cobrinha! </h1>
         <canvas id="snake" width="512" height="512"></canvas>
+        <script>
+            
+            var a = window.prompt('Está pronto para iniciar a aventura?');
+            var respostaValida = a.toLowerCase();
+            if (respostaValida =='sim') {
+                window.alert('Ok, vamos lá!');
+            } else{
+                window.alert('Resposta Errada! ');
+            }
+            
+        </script>
     </body>
 </html>
 <meta charset="UTF-8">
