--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <h1>Jogo da Cobrinha! </h1>
         <canvas id="snake" width="512" height="512"></canvas>
+        <div id="score"></div>
         <script>
             
             var a = window.prompt('Está pronto para iniciar a aventura?');
